java/java-tests/testData/inspection/dataFlow/fixture/BoxingIncorrectLiteral.java
class Testcase {
  void test() {
    Character x = <error descr="Incompatible types. Found: 'java.lang.String', required: 'java.lang.Character'">"foo";</error>
  }
}